--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-DATABASE_URL=postgres://postgres:1234@localhost:5432/deviceatlas
+PGPASSWORD=Device@tlas
+DATABASE_URL=postgres://tslkieuomj:{PGPASSWORD}@deviceatlas-server.postgres.database.azure.com:5432/deviceatlas-database
 LICENCE_KEY=e6ce0b9455cab0e494be4587d016c7c2
 PORT = 5000
